<resources>
    <string name="app_name">MReader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="zhihudaily">知乎日报</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">重试</string>
    <string name="app_intro">随时随地阅读，每天进步一点点</string>
    <string name="app_version">当前版本: v0.2.2</string>
    <string name="about_project">关于项目</string>
    <string name="data_source">数据来源</string>
    <string name="project_intro">这是本人开发的一款阅读类App，集合了各大知识分享平台的API，方便平常浏览。 由于是个人项目，没那么多限制，会尽量按照我个人的想法去设计，当然Material Design少不了，也欢迎你提出宝贵的反馈意见，来帮助我改善。</string>
    <string name="gank_io">干货集中营：http://www.gank.io</string>
    <string name="zhihudaily_api">知乎日报：https://github.com/izzyleung/ZhihuDailyPurify/wiki/</string>
    <string name="about">关于</string>
    <string name="gank">干货集中营</string>
    <string name="google_dev_blog">Google开发者博客</string>
    <string name="share">分享</string>
    <string name="favorite">收藏</string>
    <string name="more">更多</string>
    <string name="copy">复制</string>
    <string name="clear_cache">清除缓存</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置</string>
</resources>
