<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_zhihu"
            android:icon="@drawable/ic_zhihu"
            android:title="@string/zhihudaily" />
        <item
            android:id="@+id/nav_gank"
            android:icon="@drawable/ic_gank"
            android:title="干货集中营" />

    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting"
                />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
