<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.maksimliu.mreader.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:title="@string/app_name"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_about_app"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_app_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_about_app"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/spacing_normal"
                    android:text="@string/app_intro"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_app_intro"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/spacing_normal"
                    android:text="@string/app_version"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal" />



            </RelativeLayout>



        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_normal"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/about_project"
                android:textColor="@color/primaryText" />

            <android.support.v7.widget.CardView
                app:cardCornerRadius="@dimen/card_round_corner"
                android:elevation="@dimen/card_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ContentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/project_intro" />

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_source"
                android:layout_marginTop="@dimen/spacing_normal"
                android:textColor="@color/primaryText" />

            <android.support.v7.widget.CardView
                app:cardCornerRadius="@dimen/card_round_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:orientation="vertical">


                    <TextView
                        style="@style/ContentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gank_io" />

                    <TextView
                        style="@style/ContentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zhihudaily_api" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/ContentTextView"
                        android:text="本项目API收录于网络，仅用作学习之用，若有侵权，请通知本人删除"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
